[gd_scene load_steps=25 format=3 uid="uid://d1a1s0x7tsi1i"]

[ext_resource type="Script" path="res://Main.gd" id="1_nfgpe"]
[ext_resource type="PackedScene" uid="uid://bhinpp6ankmnj" path="res://Tooltip.tscn" id="2_atu00"]
[ext_resource type="Texture2D" uid="uid://c6o8s2wiymnp0" path="res://uiImgs/wins.png" id="3_8voak"]
[ext_resource type="AudioStream" uid="uid://b5axhmdnxxtj3" path="res://sfx/open.mp3" id="4_g0kiw"]
[ext_resource type="FontFile" uid="uid://drxqa43mwcvwa" path="res://Comic Sans MS.ttf" id="4_ito2v"]
[ext_resource type="AudioStream" uid="uid://dh0xjm2irjbus" path="res://sfx/boiler.ogg" id="4_x00mb"]
[ext_resource type="AudioStream" uid="uid://1cpcn0db4c2j" path="res://sfx/activate.mp3" id="6_3d66k"]
[ext_resource type="AudioStream" uid="uid://dlh2o1xmv11si" path="res://sfx/reveal.ogg" id="6_fuucm"]
[ext_resource type="AudioStream" uid="uid://dq8shbylq3j85" path="res://sfx/loss.ogg" id="7_r535k"]
[ext_resource type="AudioStream" uid="uid://dkcqj6no51i2s" path="res://sfx/destroy.ogg" id="7_xg3pp"]
[ext_resource type="AudioStream" uid="uid://0qg5d7lm0d3o" path="res://sfx/transmog.ogg" id="8_cvdy0"]
[ext_resource type="AudioStream" uid="uid://cbwjhibu6vyf4" path="res://sfx/win.ogg" id="8_gn4mg"]
[ext_resource type="AudioStream" uid="uid://bu618sdf1vbi0" path="res://sfx/close.ogg" id="9_ydiek"]
[ext_resource type="AudioStream" uid="uid://bm4u5iei70q6d" path="res://sfx/battle/shadowspike.ogg" id="13_3mmjw"]
[ext_resource type="AudioStream" uid="uid://bunp8ymlvhklu" path="res://sfx/battle/spawn.ogg" id="14_exug3"]
[ext_resource type="AudioStream" uid="uid://0cnrrcwsdcqf" path="res://sfx/battle/zap.mp3" id="16_djc8j"]
[ext_resource type="PackedScene" uid="uid://dx3j5aid1cguw" path="res://Badge.tscn" id="16_w7hqe"]
[ext_resource type="AudioStream" uid="uid://dhkk0qhxn18n" path="res://sfx/battle/shot.ogg" id="17_hs86g"]
[ext_resource type="AudioStream" uid="uid://jx61d5mr4mph" path="res://sfx/battle/killturret.ogg" id="18_18liu"]
[ext_resource type="AudioStream" uid="uid://c7ivejmduc7kc" path="res://sfx/battle/summon.ogg" id="18_fi0cd"]
[ext_resource type="Texture2D" uid="uid://0h76v7rapjil" path="res://uiImgs/orb.png" id="19_erv68"]
[ext_resource type="Script" path="res://Log.gd" id="19_fwt0p"]
[ext_resource type="Texture2D" uid="uid://22gmkrdyfwal" path="res://uiImgs/optionsButton.png" id="23_fun12"]
[ext_resource type="PackedScene" uid="uid://dv2jpb8f2ii3w" path="res://OptionsMenu.tscn" id="24_8afhc"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nfgpe")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.423651, 0.423651, 0.423651, 1)

[node name="StatusList" type="VBoxContainer" parent="."]
z_index = 50
layout_mode = 0
offset_left = 16.0
offset_top = 22.0
offset_right = 310.0
offset_bottom = 458.0
theme_override_constants/separation = 100

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1713.0
offset_top = 220.0
offset_right = 1854.0
offset_bottom = 268.0
text = "Restart Game
"

[node name="GameStatusText" type="Label" parent="."]
layout_mode = 0
offset_left = 754.0
offset_top = 12.0
offset_right = 976.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 50
text = "You won!"
horizontal_alignment = 1

[node name="GameStatusSubtext" type="Label" parent="."]
layout_mode = 0
offset_left = 753.0
offset_top = 75.0
offset_right = 982.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0.89059, 0.89059, 0.89059, 1)
theme_override_font_sizes/font_size = 20
text = "Click any box to restart."
horizontal_alignment = 1

[node name="TriggerPostClicksTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WinsIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1735.0
offset_top = 15.0
offset_right = 1775.0
offset_bottom = 55.0
texture = ExtResource("3_8voak")

[node name="NumWinsText" type="Label" parent="."]
layout_mode = 0
offset_left = 1773.0
offset_top = 14.0
offset_right = 1830.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("4_ito2v")
theme_override_font_sizes/font_size = 30
text = ": 0"
horizontal_alignment = 1

[node name="WinsToNextText" type="Label" parent="."]
layout_mode = 0
offset_left = 1663.0
offset_top = 59.0
offset_right = 1891.0
offset_bottom = 86.0
text = "Reach 5 wins for a NEW ROW"
horizontal_alignment = 1

[node name="WinstreakText" type="Label" parent="."]
layout_mode = 0
offset_left = 1697.0
offset_top = 86.0
offset_right = 1861.0
offset_bottom = 115.0
text = "Winstreak: 0"
horizontal_alignment = 1

[node name="BestWinstreakText" type="Label" parent="."]
layout_mode = 0
offset_left = 1698.0
offset_top = 111.0
offset_right = 1862.0
offset_bottom = 140.0
text = "Best Winstreak: 0"
horizontal_alignment = 1

[node name="CurOpenText" type="Label" parent="."]
layout_mode = 0
offset_left = 1693.0
offset_top = 133.0
offset_right = 1857.0
offset_bottom = 162.0
text = "Currently Open: 0
"
horizontal_alignment = 1

[node name="CurDestroyedText" type="Label" parent="."]
layout_mode = 0
offset_left = 1695.0
offset_top = 157.0
offset_right = 1870.0
offset_bottom = 186.0
text = "Currently Destroyed: 0"
horizontal_alignment = 1

[node name="CurRevealedText" type="Label" parent="."]
layout_mode = 0
offset_left = 1695.0
offset_top = 182.0
offset_right = 1870.0
offset_bottom = 211.0
text = "Currently Revealed: 0"
horizontal_alignment = 1

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_x00mb")
bus = &"Music"
parameters/looping = true

[node name="OpenFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_g0kiw")
volume_db = -6.933
pitch_scale = 1.29
max_polyphony = 5
bus = &"SFX"

[node name="RevealFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fuucm")
volume_db = -6.933
pitch_scale = 1.29
max_polyphony = 30
bus = &"SFX"

[node name="ActivateFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3d66k")
max_polyphony = 5
bus = &"SFX"

[node name="DestroyFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_xg3pp")
volume_db = -2.0
pitch_scale = 0.77
max_polyphony = 5
bus = &"SFX"

[node name="TransmogFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_cvdy0")
volume_db = -10.4
pitch_scale = 1.11
max_polyphony = 5
bus = &"SFX"

[node name="CloseFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ydiek")
max_polyphony = 20
bus = &"SFX"

[node name="LossFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_r535k")
volume_db = -4.952
max_polyphony = 3
bus = &"SFX"

[node name="WinFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_gn4mg")
volume_db = -7.429
max_polyphony = 3
bus = &"SFX"

[node name="ShadowSpikeSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_3mmjw")
volume_db = -15.0
max_polyphony = 20
bus = &"SFX"

[node name="SpawnSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_exug3")
pitch_scale = 0.94
max_polyphony = 20
bus = &"SFX"

[node name="ZapSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_djc8j")
volume_db = -5.185
pitch_scale = 1.15
max_polyphony = 20
bus = &"SFX"

[node name="ShotSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_hs86g")
volume_db = 3.355
pitch_scale = 1.02
max_polyphony = 20
bus = &"SFX"

[node name="SummonSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_fi0cd")
pitch_scale = 1.02
max_polyphony = 20
bus = &"SFX"

[node name="OneshotSoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = 3.66
pitch_scale = 1.41
bus = &"SFX"

[node name="KillTurretSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_18liu")
max_polyphony = 3
bus = &"SFX"

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 21.0
offset_top = 432.0
offset_right = 517.0
offset_bottom = 808.0
color = Color(0, 0, 0, 0.305882)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 439.0
offset_right = 507.0
offset_bottom = 797.0
vertical_scroll_mode = 2
script = ExtResource("19_fwt0p")

[node name="LogContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="Tooltip" parent="." instance=ExtResource("2_atu00")]
z_index = 1
layout_mode = 1
offset_left = 1133.0
offset_top = 11.0
offset_right = 1637.0
offset_bottom = 312.0

[node name="BadgesTextureRect" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 1200.0
offset_top = 324.0
offset_right = 1841.0
offset_bottom = 942.0
color = Color(0, 0, 0, 0.305882)

[node name="BadgesHeader" type="Label" parent="."]
layout_mode = 0
offset_left = 1244.0
offset_top = 336.0
offset_right = 1439.0
offset_bottom = 379.0
theme_override_fonts/font = ExtResource("4_ito2v")
theme_override_font_sizes/font_size = 30
text = "Achievements"

[node name="PointsHeader" type="Label" parent="."]
layout_mode = 0
offset_left = 1527.0
offset_top = 330.0
offset_right = 1722.0
offset_bottom = 359.0
theme_override_fonts/font = ExtResource("4_ito2v")
theme_override_font_sizes/font_size = 20
text = "Achievement Points"

[node name="BPContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1578.0
offset_top = 358.0
offset_right = 1661.0
offset_bottom = 383.0

[node name="BP1" type="TextureRect" parent="BPContainer"]
visible = false
layout_mode = 2
texture = ExtResource("19_erv68")

[node name="BP2" type="TextureRect" parent="BPContainer"]
visible = false
layout_mode = 2
texture = ExtResource("19_erv68")

[node name="BP3" type="TextureRect" parent="BPContainer"]
visible = false
layout_mode = 2
texture = ExtResource("19_erv68")

[node name="BP4" type="TextureRect" parent="BPContainer"]
visible = false
layout_mode = 2
texture = ExtResource("19_erv68")

[node name="BP5" type="TextureRect" parent="BPContainer"]
visible = false
layout_mode = 2
texture = ExtResource("19_erv68")

[node name="AchievementsContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 1255.13
offset_top = 433.0
offset_right = 1780.13
offset_bottom = 891.0
theme_override_constants/h_separation = 75
theme_override_constants/v_separation = 75
columns = 8

[node name="RevealOne" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "reveal"

[node name="Smartflag" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "smartflag"

[node name="Study" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "study"

[node name="Tape Start" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "tapestart"

[node name="Gamer Mode" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "gamermode"

[node name="BanishPandoras" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "banishpandoras"

[node name="BadgeBoxUp1" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "badgeboxup1"

[node name="Adventurer" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "adventurer"

[node name="Collapse" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "collapse"

[node name="Contagion" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "contagion"

[node name="Gardener" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "gardener"

[node name="BadgeBoxUp3" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "badgeboxup3"

[node name="Mario" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "mario"

[node name="Eclipse" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "eclipse"

[node name="BadgeBoxUp2" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "badgeboxup2"

[node name="Bright Future" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "brightfuture"

[node name="Reroller" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "reroller"

[node name="Widerow" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "widerow"

[node name="Trigaze Improve" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "trigazeimprove"

[node name="Slayer" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "slayer"

[node name="Telescope" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "telescope"

[node name="FiveHundredWins" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "fivehundredwins"

[node name="Heaven Egg" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "heavenegg"

[node name="Credit" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "credit"

[node name="Mitosis" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "mitosis"

[node name="Windy" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "windy"

[node name="FlamingMask" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "flamingmask"

[node name="TenThousandBoxes" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "tenthousandboxes"

[node name="Maddii" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "maddii"

[node name="Flying Butterfly" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "flyingbutterfly"

[node name="Nightcap" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "nightcap"

[node name="StartHeart" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "startheart"

[node name="Transmogrifier" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "transmogrifier"

[node name="Destroy Inversion" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "destroyinversion"

[node name="Relaxed" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "relaxed"

[node name="Crumbling Buff" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "crumblingbuff"

[node name="Ocean" parent="AchievementsContainer" instance=ExtResource("16_w7hqe")]
layout_mode = 2
id = "ocean"

[node name="AchievementsFront" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1200.0
offset_top = 324.0
offset_right = 1841.0
offset_bottom = 942.0
mouse_filter = 2
color = Color(0.67451, 0, 0, 0.392157)

[node name="AchievementEquipInfo" type="Label" parent="."]
layout_mode = 0
offset_left = 1198.0
offset_top = 938.0
offset_right = 1846.0
offset_bottom = 988.0
theme_override_fonts/font = ExtResource("4_ito2v")
theme_override_font_sizes/font_size = 30
text = "Equip Achievement Badges for bonus effects!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VNumber" type="Label" parent="."]
layout_mode = 0
offset_left = 1753.0
offset_top = 1047.0
offset_right = 1912.0
offset_bottom = 1076.0
theme_override_colors/font_color = Color(0.775063, 0.775063, 0.775063, 1)
text = "version fun point one"

[node name="BoxesHolder" type="Control" parent="."]
anchors_preset = 0
offset_left = 411.0
offset_top = 21.0
offset_right = 1411.0
offset_bottom = 1021.0
pivot_offset = Vector2(500, 500)
mouse_filter = 2

[node name="OptionsRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 58.0
offset_bottom = 58.0
texture = ExtResource("23_fun12")

[node name="OptionsButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 6.0
offset_top = 8.0
offset_right = 59.0
offset_bottom = 62.0

[node name="Dimmer" type="ColorRect" parent="."]
visible = false
z_index = 149
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.603922)

[node name="OptionsMenu" parent="." instance=ExtResource("24_8afhc")]
visible = false
z_index = 150
layout_mode = 1
offset_left = -1425.0
offset_top = 68.0
offset_right = -1425.0
offset_bottom = 68.0

[connection signal="button_up" from="RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="timeout" from="TriggerPostClicksTimer" to="." method="_on_trigger_post_clicks_timer_timeout"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
